[package]
name = "concurrency"
version = "0.1.0"
authors = ["Leonty Chudinov <leonty@inbox.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "0.4"
num = "0.1.27"
image = "0.13.0"
crossbeam = "0.2.8"
argparse = "0.2.1"
byteorder = "0.5.3"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "fork_join"
path = "src/fork_join/main.rs"

[[bin]]
name = "rayon"
path = "src/rayon/main.rs"

[[bin]]
name = "mandelbrot"
path = "src/mandelbrot/main.rs"

[[bin]]
name = "channels"
path = "src/channels/main.rs"

[[bin]]
name = "mutex"
path = "src/mutex/main.rs"