[package]
name = "macros"
version = "0.1.0"
authors = ["Leonty Chudinov <leonty@inbox.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "macros"
path = "src/main.rs"

[[bin]]
name = "modules"
path = "src/modules/main.rs"